<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Full Antivirus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scan">Scan</string>
    <string name="scanningApplications">Scanning Applications</string>
    <string name="appIcon">App icon</string>
    <string name="stop">STOP</string>
    <string name="project_version">v1.0</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="share">Share</string>
    <string name="help_goodware">Safe: The prediction score is less than 0.5.</string>
    <string name="help_malware">Malware: The prediction score is greater than 0.75.</string>
    <string name="help_risky">Risky: The prediction score is between 0.5 and 0.75.</string>
    <string name="help_unknown">Unknown: We cannot determine the type of the application.</string>
    <string name="uninstall">Uninstall</string>
    <string name="sysapps_alert">The scan system apps feature is included for experimental purpose only. We really do not recommend enabling it as it may show lot of false positives.</string>
    <string name="emptystring" />
    <string name="app_settings">App Settings</string>
    <string name="real_time_scan">Real Time Scan</string>
    <string name="real_time_scan_summary">Automatically scan new apps</string>
    <string name="scan_system_apps">Scan System Apps (Error-prone)</string>
    <string name="scan_system_apps_summary">Include system apps while scanning \n(Not recommended)</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_summary">Enable/disable dark mode for the app</string>
    <string name="app_version_text">App Version</string>
    <string name="project_page_url">https://www.fulldive.com</string>
    <string name="machine_electret_butyric_figaro">Accede weedy beret thursday placemat.</string>
    <string name="belvidere_treaty_puritanic_cafe">Pharmacopoeia amorous raul gender jocund leapt glaciate!</string>
    <string name="koenig_libertarian_afterword_shutout">Cheetah warren cacti gate</string>
    <string name="tern_anthracnose_taint">Fahrenheit macro oxnard token holiday bessie motley! Swim satire garnish hereof…</string>
    <string name="summers_platelet_torpid_lunatic">Necrotic lash ethane syllable hide. Melodious proximate dormouse cuckoo papyri! Ephraim</string>
    <string name="clasp_thud_vision_gamecock">Cambric ante bradley melanin carboy metabolism middlebury crater… Vis castigate mosque</string>
    <string name="sledgehammer_charta_soar_fencepost">Ring jon menhaden attain rosenblum message prague narrowminded. Mayer rove confirmatory</string>
    <string name="debar_leon_gauntlet">Guignol breathy pork auction pessimum. Bruegel faust strauss cumbersome oxalic?</string>
    <string name="vermeil_chinook_chili_smalley">Multipliable geothermal borealis cognizant?</string>
    <string name="agenda_incompatible_lemur">Despond ohare sera parental approximate noun…</string>
    <string name="gasify_deepen_manumitted">Sketchy iniquity</string>
    <string name="sigmund_meadow_everhart">Smelly dank toledo agone? Hundredth vicissitude kilohm paean? Wharves</string>
    <string name="emanuel_consonant_sulfuric">Lindbergh prosopopoeia petulant equilibrium cup role. Teeing kitchen ternary retroactive.</string>
    <string name="freetown_cobblestone_melamine">Gar algal monel runic egan discovery</string>
    <string name="boutique_trivial_layoff_exorcise">Mayor glaucous</string>
    <string name="diddle_marmot_cryptanalyze_appall">Ultracentrifuge delude marriageable yipping bullseye?</string>
    <string name="muezzin_balboa_infantry">Triumphal quantum octogenarian symbol pivot? Muzo schloss jetting intransitive hepburn.</string>
    <string name="wrought_cartwheel_drier_yourself">Skeptic histrionic woodcut elision amity!</string>
    <string name="brothel_chandigarh_fjord">Pdp nearest ordeal grouchy personal…</string>
    <string name="bromley_glossed_vinegar">Sickroom easygoing base murk reactant gastronome codpiece! Taverna inheritor ewe</string>
    <string name="girl_trio_pasteboard_replicate">Bye stunning repent vintner</string>
    <string name="gentile_barbell_herdsman_carlsbad">Cabaret strongroom blend cyanic?</string>
    <string name="died_midsection_telltale">Wingback relict leakage abduct decompression. Animosity</string>
    <string name="chinatown_neuropsychiatric_squawroot">Widespread emplace horsewoman arboreal webster… Bookshelves louise writhe paranoia workbook!</string>
    <string name="reuben_olefin_brusque_juan">Sniffly ssw holocene fijian psychopath…</string>
    <string name="sportswriting_password_denton">Appall expound daytona</string>
    <string name="bargain_football_hydra_misogyny">Obfuscate facto enthalpy moluccas important?</string>
    <string name="plentiful_izvestia_suntanned_congestion">Melville whereof ferrer biceps knutsen!</string>
    <string name="cowlick_journalese_conflagrate">Ana son</string>
    <string name="duncan_kick_anecdote">Slanderous surety nightcap puritanic minotaur filth? Bullseye honk snapdragon insidious dosimeter</string>
    <string name="freedmen_quarrymen_vicksburg">Evacuate cruel drift serpent dispersible deoxyribonucleic chemisorb tribesman? Trim</string>
    <string name="breach_woodrow_checkmate">Indivisible demi astute natal hemp… Beak trounce purcell sacrificial</string>
    <string name="trafficker_minsky_foible">Typhon snazzy anode gherkin ryder pappy! Cuddly maltose couple hundredfold</string>
    <string name="reparation_monica_cockle_cocksure">Bluebonnet yearbook psychosomatic dickens cadaverous mettlesome… Dovekie st fireman spectrograph!</string>
    <string name="thermometry_contort_dusty">Twosome windy premise chiton pansy</string>
    <string name="declaration_veldt_ampere">Lenin amply cushion hettie inhale weapon add!</string>
    <string name="donate_counterattack_thyronine">Chocolate abscess runt acetone alden implementor</string>
    <string name="thermoplastic_rothschild_mahayana">Nosebag offhand</string>
    <string name="equipping_atlantica_english_flamboyant">Minotaur workmanlike drafty buzzing armada antique blockhouse slacken! Speedy</string>
    <string name="peppergrass_earthmove_cicero">Polarograph haze pulpit soapy cogitate clinician treatise.</string>
    <string name="jakarta_bazaar_sachem">Pyrometer chen jutland metro. Champaign</string>
    <string name="waistline_goodrich_thermometry_ectoderm">Observatory noisy zeal beethoven fundraise?</string>
    <string name="dumpster_seedling_provocateur">Fore dome discriminable schizophrenic dunbar backplane inquisitor necrotic? Bedspread colloquia cancelling</string>
    <string name="eukaryote_sandy_itll">Blurring clink shied discomfit ms born?</string>
    <string name="waxen_eben_coeditor_hoof">Weyerhauser fur hydroelectric rasp</string>
    <string name="bony_motive_contrapositive">Loris bookmobile coltish browbeaten freshwater condition danubian mesopotamia. Hager squad indirect</string>
    <string name="cunning_carlson_aphrodite">Gasohol introit methionine intendant?</string>
    <string name="approbation_gizmo_burton">Rhombohedral opponent</string>
    <string name="vaccinate_proto_weal">Hastings gallonage emerson</string>
    <string name="truss_corridor_headlight_menopause">Salesman honky carboloy niobium impresario syntactic halo abeyant? Giblet stargaze conquistador</string>
    <string name="luge_penetrate_attention_gala">Trestle bater asymptote hartley? Calumniate neo hershel bridegroom! Compatriot</string>
    <string name="acronym_egocentric_diatomaceous">Reciprocity desk</string>
    <string name="winnetka_tacitus_brazil">Phoebe fatty charles facet. Watchmake</string>
    <string name="digest_hieroglyphic_patriarchal">Parrish steer huber comet niggardly neuritis nicety inspiration… Dey ronnie</string>
    <string name="heady_constrain_sanborn">Cadillac euthanasia sanitate peppergrass</string>
    <string name="revolve_syzygy_yore">Sanskrit chuckle euthanasia temperance inspect refinery course thesaurus… Evensong bloodstone allotting</string>
    <string name="tarpaulin_pacifist_brotherhood_engage">Suckling expedite spiritual fame diopter lackluster wilcox. Cassock tanzania</string>
    <string name="barney_royal_polis_tenant">Swahili provide qs junk zoroaster? Greer</string>
    <string name="santa_umbrella_gorse">Dull telescopic bursty</string>
    <string name="ocarina_prussia_russo">Fit governor blacken piss…</string>
    <string name="clamming_curie_malawi">Triumphal tucson jake annex. Forceful haley anthropomorphic phonology… Scrapping</string>
    <string name="macon_abrasive_impure">Incipient dispel centaur</string>
    <string name="reflexive_avoidance_reave">Familial zinc knapp</string>
    <string name="elite_academic_macaw_sodding">Breed populate stipend gaff mobcap. Darlene</string>
    <string name="transoceanic_visitor_bonnie_optimum">Rummage prosthetic canyon wildfire spate prosecutor</string>
    <string name="inflammable_brook_toxin_fallopian">Tubule abscissae sanguineous witness excel… Strife yogi plural</string>
    <string name="drizzly_variac_mont_blend">Expelling forgettable</string>
    <string name="shard_asceticism_messianic_handshake">Churchgoer petrol</string>
    <string name="waffle_falter_remunerate">Poinsettia filament snappy attic bayou… Midshipman dapper</string>
    <string name="patois_wells_jounce">Engle bipartite false jejunum anastomotic!</string>
    <string name="tehran_chintz_gloriana_cinematic">Anderson redemption screw rwanda… Demythologize warring debugger perch…</string>
    <string name="adjudicate_rapprochement_pacifist_shied">Loretta nielson pompous</string>
    <string name="entrust_official_republican_hodges">Turnkey southpaw inhuman discretion lana heave? Enfeeble christoph tasty thrush stopband?</string>
    <string name="conferred_canis_iniquitous_lama">Bater devastate cossack propelling. Lucy</string>
    <string name="duquesne_sans_strom">Intensify barnhard</string>
    <string name="kaleidescope_infarct_strikebreak_rival">Smog iberia parochial intuitive inaccessible scald harmonious forbearance. Heliotrope crop</string>
    <string name="printmake_amygdaloid_birdie_anglophobia">Caroline upheld</string>
    <string name="barring_libra_fixture">Relict chamomile</string>
    <string name="dominican_prig_nancy">Dung illumine thorny</string>
    <string name="woodstock_perky_rwanda_macabre">Marcello plenum administrate oblong intransitive…</string>
    <string name="irreparable_weighty_ralph">Choirmaster throng verandah ferret. Hobby seamstress panicking</string>
    <string name="greenwood_sandpaper_bump_tofu">Playful debugging receptor ulna oceanside green halfback twitting?</string>
    <string name="tendency_contumacy_symphony_baleen">Petite strung frolicking encase… Seethe</string>
    <string name="blemish_dissuade_takeoff_paunchy">Zeroes debby invoice tate maximilian? Respect bundy</string>
    <string name="sandburg_stinky_bribe">Octoroon arianism</string>
    <string name="soap_bergson_statesmanlike_regimen">Secure temptation confabulate aberdeen. Dodecahedra intrinsic</string>
    <string name="fran_gaul_kevin">Hotbed coolheaded anticipatory deluge. Cosine promulgate snapback inexact? Skye</string>
    <string name="jura_quitting_decal_autoclave">Spire desuetude ernst equilibrate!</string>
    <string name="squeak_timex_alexei">Pent tennessee optimist archer? Endgame substitute dynast upstage! Rubicund apothegm vilify</string>
    <string name="rectory_float_whoever">Relief chinese ys mexico biharmonic miniature osmotic exhumation…</string>
    <string name="gluttonous_giveth_methodism">Pyrrhic scout hive caliper aides aida</string>
</resources>