<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <LinearLayout android:gravity="center_horizontal|start" android:id="@+id/rhodiumLindstromLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical" app:layout_constraintBottom_toTopOf="@id/childishMillView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <Button android:background="#68726AB3" android:hint="@string/girl_trio_pasteboard_replicate" android:id="@+id/gainfulFibbingView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/luge_penetrate_attention_gala" android:textColor="@color/hollowware_delete"/>
        <CheckedTextView android:background="@color/colander_magenta_ross" android:hint="@string/gluttonous_giveth_methodism" android:id="@+id/statueView" android:layout_height="wrap_content" android:layout_margin="@dimen/parley_bissau_padding" android:layout_width="wrap_content" android:text="@string/cunning_carlson_aphrodite" android:textColor="@color/coroutine_mozzarella_prevent"/>
        <TextView android:hint="@string/reparation_monica_cockle_cocksure" android:id="@+id/pelhamView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/winnetka_tacitus_brazil" android:textColor="@color/complicate_camouflage_inferior"/>
        <AutoCompleteTextView android:background="@color/revocable_depletion" android:hint="@string/entrust_official_republican_hodges" android:id="@+id/mongoliaView" android:layout_height="wrap_content" android:layout_width="match_parent" android:paddingBottom="32dp" android:paddingTop="@dimen/tetrahedron_vendible_height" android:text="@string/thermoplastic_rothschild_mahayana" android:textColor="#603D1B76" android:textSize="@dimen/eigenspace_showboat_textsize"/>
        <AutoCompleteTextView android:background="@color/gilbertson_renoir_rend" android:hint="@string/declaration_veldt_ampere" android:id="@+id/buttonweedCurricularView" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/midge_rosette_size" android:layout_marginEnd="@dimen/permanent_falmouth" android:layout_marginStart="@dimen/transmitting_psychiatry_width" android:layout_marginTop="@dimen/lexical_winslow_size" android:layout_width="wrap_content" android:padding="10dp" android:text="@string/approbation_gizmo_burton"/>
        <CheckedTextView android:hint="@string/barring_libra_fixture" android:id="@+id/prontoVantageView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/equipping_atlantica_english_flamboyant" android:textColor="@color/sunny_ablate_parallelepiped" android:textSize="@dimen/modesto_inadvertent_textsize"/>
    </LinearLayout>
    <CheckedTextView android:background="#6E3F70C2" android:hint="@string/wrought_cartwheel_drier_yourself" android:id="@+id/childishMillView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/jakarta_bazaar_sachem" android:textColor="@color/bumble_presupposition" app:layout_constraintBottom_toTopOf="@id/stonehengeView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/rhodiumLindstromLayout"/>
    <CheckedTextView android:background="#CD3BE4" android:hint="@string/clasp_thud_vision_gamecock" android:id="@+id/stonehengeView" android:layout_height="wrap_content" android:layout_margin="@dimen/flatulent_maryland_size" android:layout_width="match_parent" android:text="@string/vaccinate_proto_weal" app:layout_constraintBottom_toTopOf="@id/infanticideLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/childishMillView"/>
    <LinearLayout android:gravity="center_vertical" android:id="@+id/infanticideLayout" android:layout_height="wrap_content" android:layout_width="0dp" android:orientation="horizontal" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/stonehengeView">
        <Button android:background="@color/aviatrix_ordinate" android:hint="@string/tarpaulin_pacifist_brotherhood_engage" android:id="@+id/santayanaView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/heady_constrain_sanborn"/>
        <AutoCompleteTextView android:background="@color/carousel_ottawa" android:hint="@string/duquesne_sans_strom" android:id="@+id/italianView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/santa_umbrella_gorse" android:textColor="@color/amicable_shopping" android:textSize="@dimen/mossy_lissajous_textsize"/>
        <CheckBox android:background="@color/gilbertson_renoir_rend" android:hint="@string/sledgehammer_charta_soar_fencepost" android:id="@+id/isoplethMckinleyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/breach_woodrow_checkmate"/>
        <CheckBox android:background="@color/codetermine_kikuyu_callisto" android:hint="@string/duncan_kick_anecdote" android:id="@+id/mutualView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/reflexive_avoidance_reave" android:textColor="@color/detestation_tall"/>
        <CheckBox android:background="@color/abdominal_boswell_valerie" android:hint="@string/waxen_eben_coeditor_hoof" android:id="@+id/anomalyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/thermometry_contort_dusty" android:textColor="@color/counterman_bluestocking_vanderpoel"/>
        <TextView android:background="@color/veterinarian_joyride" android:hint="@string/woodstock_perky_rwanda_macabre" android:id="@+id/youngishView" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/waistline_goodrich_thermometry_ectoderm" android:textColor="@color/ultracentrifuge_arteriole"/>
        <Button android:background="@color/fund_tableaux" android:hint="@string/dumpster_seedling_provocateur" android:id="@+id/acerbicBoobyView" android:layout_height="match_parent" android:layout_margin="@dimen/edwards_rhizome_width" android:layout_width="wrap_content" android:text="@string/freetown_cobblestone_melamine" android:textColor="@color/plumbago_cutlet_mesmeric"/>
        <EditText android:hint="@string/summers_platelet_torpid_lunatic" android:id="@+id/bentonView" android:inputType="textCapCharacters" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/freedmen_quarrymen_vicksburg" android:textColor="#AE0188DB"/>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/upperLayout" android:layout_height="wrap_content" android:layout_width="wrap_content">
            <Button android:background="#806BE185" android:hint="@string/patois_wells_jounce" android:id="@+id/brandtRensselaerView" android:layout_height="wrap_content" android:layout_width="0dp" android:text="@string/gasify_deepen_manumitted" app:layout_constraintBottom_toTopOf="@id/millivoltView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
            <AutoCompleteTextView android:hint="@string/donate_counterattack_thyronine" android:id="@+id/millivoltView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/rectory_float_whoever" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/brandtRensselaerView"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView android:background="@color/indeed_fiendish_decline" android:hint="@string/sandburg_stinky_bribe" android:id="@+id/mendaciousView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/boutique_trivial_layoff_exorcise" android:textSize="28sp"/>
        <Button android:background="@color/carousel_ottawa" android:hint="@string/revolve_syzygy_yore" android:id="@+id/mynheerView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/fran_gaul_kevin" android:textColor="@color/edelweiss_nosebleed"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
