<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <LinearLayout android:gravity="center" android:id="@+id/phoenixLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <CheckBox android:background="#100C7F80" android:hint="@string/tern_anthracnose_taint" android:id="@+id/yangProddingView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/brothel_chandigarh_fjord"/>
        <CheckedTextView android:background="@color/peggy_intelligentsia_swell" android:hint="@string/muezzin_balboa_infantry" android:id="@+id/halocarbonHysterectomyView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:padding="@dimen/cole_porcelain_height" android:text="@string/chinatown_neuropsychiatric_squawroot" android:textColor="@color/cadet_jessica_astoria"/>
        <TextView android:background="@color/kilowatt_pessimist_orchid" android:hint="@string/digest_hieroglyphic_patriarchal" android:id="@+id/tookView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/thermometry_contort_dusty" android:textColor="@color/modal_posy"/>
        <TextView android:background="@color/wellesley_nagging_however" android:hint="@string/printmake_amygdaloid_birdie_anglophobia" android:id="@+id/italianView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/tarpaulin_pacifist_brotherhood_engage" android:textColor="@color/rectangle_lumpish"/>
        <CheckedTextView android:background="#910E48" android:hint="@string/diddle_marmot_cryptanalyze_appall" android:id="@+id/reckonCherishView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/peppergrass_earthmove_cicero" android:textSize="@dimen/ahead_cairo_textsize"/>
        <TextView android:background="@color/tympanum_muddy" android:hint="@string/tehran_chintz_gloriana_cinematic" android:id="@+id/auraMacgregorView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/truss_corridor_headlight_menopause" android:textColor="@color/singe_nuthatch" android:textSize="@dimen/spontaneity_shaky_textsize"/>
        <EditText android:background="#BA9EC585" android:hint="@string/died_midsection_telltale" android:id="@+id/assayIberiaView" android:inputType="text" android:layout_height="wrap_content" android:layout_margin="24dp" android:layout_width="wrap_content" android:text="@string/blemish_dissuade_takeoff_paunchy" android:textColor="@color/cancellate_caputo_coprinus"/>
        <LinearLayout android:gravity="center_horizontal" android:id="@+id/repellentHoppingLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="vertical">
            <CheckBox android:background="@color/lark_scrimmage" android:hint="@string/drizzly_variac_mont_blend" android:id="@+id/bonaAdverbView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/elite_academic_macaw_sodding" android:textColor="@color/sunny_ablate_parallelepiped"/>
            <Button android:background="@color/leprosy_hardtop_asplenium" android:hint="@string/transoceanic_visitor_bonnie_optimum" android:id="@+id/plasmInexpressibleView" android:layout_height="wrap_content" android:layout_width="match_parent" android:text="@string/dominican_prig_nancy" android:textColor="@color/celerity_oddball_afforest"/>
            <TextView android:background="#45E286" android:hint="@string/machine_electret_butyric_figaro" android:id="@+id/toppleConceptionView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/cowlick_journalese_conflagrate" android:textColor="@color/dixie_strumming_pejorative"/>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/electrodeLayout" android:layout_height="wrap_content" android:layout_width="wrap_content">
                <CheckedTextView android:background="@color/dockyard_stream_sporadic" android:hint="@string/agenda_incompatible_lemur" android:id="@+id/peakyRomanView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/koenig_libertarian_afterword_shutout" android:textColor="@color/settle_awoke" app:layout_constraintBottom_toTopOf="@id/pumiceMincemeatView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
                <EditText android:background="#780E43" android:hint="@string/conferred_canis_iniquitous_lama" android:id="@+id/pumiceMincemeatView" android:inputType="textPersonName" android:layout_height="wrap_content" android:layout_margin="@dimen/threonine_poor" android:layout_width="wrap_content" android:text="@string/clamming_curie_malawi" android:textColor="@color/coexist_joel" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/peakyRomanView"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView android:background="#F5C51320" android:hint="@string/emanuel_consonant_sulfuric" android:id="@+id/nonethelessWallboardView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/duquesne_sans_strom" android:textColor="@color/boric_qatar_transferable"/>
            <AutoCompleteTextView android:hint="@string/macon_abrasive_impure" android:id="@+id/robeView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/soap_bergson_statesmanlike_regimen" android:textColor="@color/schumann_mutatis_premium"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
