<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
    <AutoCompleteTextView android:background="@color/hollowware_delete" android:hint="@string/debar_leon_gauntlet" android:id="@+id/portugalGummingView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/eukaryote_sandy_itll" android:textColor="#D8821A" app:layout_constraintBottom_toTopOf="@id/twentiethLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/twentiethLayout" android:layout_height="wrap_content" android:layout_width="match_parent" app:layout_constraintBottom_toTopOf="@id/etchDovekieLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/portugalGummingView">
        <Button android:background="@color/plasm_balinese" android:hint="@string/sigmund_meadow_everhart" android:id="@+id/prontoVantageView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/irreparable_weighty_ralph" android:textColor="@color/adirondack_deactivate_impunity" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:gravity="top" android:id="@+id/etchDovekieLayout" android:layout_height="wrap_content" android:layout_width="@dimen/constructible_brandon_padding" android:orientation="horizontal" app:layout_constraintBottom_toTopOf="@id/basiliskReckView" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/twentiethLayout">
        <CheckedTextView android:hint="@string/bromley_glossed_vinegar" android:id="@+id/melpomeneFrightenView" android:layout_height="wrap_content" android:layout_marginTop="@dimen/panning_habeas_margin" android:layout_width="wrap_content" android:text="@string/sportswriting_password_denton" android:textColor="@color/ziegler_sedimentation"/>
        <CheckedTextView android:background="@color/chloe_nowaday_pappas" android:hint="@string/ocarina_prussia_russo" android:id="@+id/russoMalariaView" android:layout_height="match_parent" android:layout_width="wrap_content" android:paddingEnd="@dimen/protactinium_cancellate_padding" android:paddingStart="@dimen/solomon_fernery_padding" android:text="@string/conferred_canis_iniquitous_lama" android:textColor="@color/chlorophyll_wyandotte_milky" android:textSize="@dimen/goldstine_metabolite_textsize"/>
        <TextView android:background="@color/glare_salutary" android:hint="@string/squeak_timex_alexei" android:id="@+id/whitetailView" android:layout_height="match_parent" android:layout_width="wrap_content" android:paddingBottom="@dimen/pastel_lunar_height" android:paddingTop="@dimen/viaduct_wore_size" android:text="@string/waxen_eben_coeditor_hoof" android:textColor="#9A8F52"/>
        <CheckBox android:background="@color/augment_downstate" android:hint="@string/belvidere_treaty_puritanic_cafe" android:id="@+id/suppressorView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/shard_asceticism_messianic_handshake" android:textColor="#D7186484"/>
        <AutoCompleteTextView android:hint="@string/plentiful_izvestia_suntanned_congestion" android:id="@+id/partyChurchgoingView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/greenwood_sandpaper_bump_tofu" android:textColor="@color/glued_grubby"/>
        <LinearLayout android:gravity="top|center_vertical" android:id="@+id/atlanticRotundaLayout" android:layout_height="wrap_content" android:layout_width="wrap_content" android:orientation="horizontal">
            <EditText android:background="@color/maine_dixon_pejorative" android:hint="@string/trafficker_minsky_foible" android:id="@+id/metallurgicPatoisView" android:inputType="textCapCharacters" android:layout_height="match_parent" android:layout_width="wrap_content" android:text="@string/vermeil_chinook_chili_smalley" android:textColor="#472288BC" android:textSize="20sp"/>
            <AutoCompleteTextView android:background="@color/dabble_timex_fahey" android:hint="@string/gentile_barbell_herdsman_carlsbad" android:id="@+id/finnView" android:layout_height="wrap_content" android:layout_margin="@dimen/parley_bissau_padding" android:layout_width="wrap_content" android:text="@string/barney_royal_polis_tenant" android:textColor="@color/anonymous_hydroelectric_invasive" android:textSize="30sp"/>
            <CheckedTextView android:background="@color/getaway_gillespie" android:hint="@string/bony_motive_contrapositive" android:id="@+id/oliviaCurbView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/bargain_football_hydra_misogyny" android:textColor="#5CF34C"/>
        </LinearLayout>
        <CheckedTextView android:background="#D5F421" android:hint="@string/adjudicate_rapprochement_pacifist_shied" android:id="@+id/slungHyperboloidView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/reuben_olefin_brusque_juan" android:textColor="@color/abdominal_boswell_valerie"/>
        <AutoCompleteTextView android:hint="@string/tendency_contumacy_symphony_baleen" android:id="@+id/ethaneView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/acronym_egocentric_diatomaceous"/>
        <Button android:background="#DCDBA8" android:hint="@string/waffle_falter_remunerate" android:id="@+id/planoconcaveHonkyView" android:layout_height="match_parent" android:layout_width="wrap_content" android:paddingBottom="@dimen/astigmatic_twitchy_width" android:paddingTop="20dp" android:text="@string/jura_quitting_decal_autoclave" android:textColor="@color/coefficient_simile"/>
    </LinearLayout>
    <CheckedTextView android:background="@color/hubbard_happenstance" android:hint="@string/kaleidescope_infarct_strikebreak_rival" android:id="@+id/basiliskReckView" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/inflammable_brook_toxin_fallopian" android:textColor="@color/vivacity_duopoly" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/etchDovekieLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>
